--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -543,14 +543,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -581,14 +581,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -619,14 +619,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -657,14 +657,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -700,14 +700,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c1.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -738,14 +738,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -776,14 +776,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -814,14 +814,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -852,14 +852,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c1.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -890,14 +890,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -928,14 +928,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
@@ -966,14 +966,14 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">Добавить в корзину</div>
+                    <div class="slider-size__title">1111 Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
-                        <li> <a href="#">XS</a></li>
-                        <li> <a href="#">S</a></li>
-                        <li> <a href="#">M</a></li>
-                        <li> <a href="#">L</a></li>
-                        <li> <a href="#">XL</a></li>
+                        <li> <a class="basket-open" href="#">XS</a></li>
+                        <li> <a class="basket-open" href="#">S</a></li>
+                        <li> <a class="basket-open" href="#">M</a></li>
+                        <li> <a class="basket-open" href="#">L</a></li>
+                        <li> <a class="basket-open" href="#">XL</a></li>
                       </ul>
                     </div>
                   </div>
