--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -293,8 +293,8 @@
             </div>
             <div class="basket-mobile-menu__footer">
               <div class="basket-mobile-menu__footer-links">
-                <div class="basket__title-link">4 Товара на сумму</div>
-                <div class="basket__title-link">6 900 РУБ.</div>
+                <div class="basket__title-link">1 Товар на сумму</div>
+                <div class="basket__title-link">12 500 РУБ.</div>
               </div>
               <button class="btn btn--black btn--medium w100 max-w100" type="submit">Оформить заказ</button>
             </div>
@@ -654,7 +654,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c2.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -699,7 +699,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c9.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -744,7 +744,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c25.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -806,7 +806,7 @@
                                   </svg></span></div>
                               <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                               <div class="slider-size"> 
-                                <div class="slider-size__title">1111 Добавить в корзину</div>
+                                <div class="slider-size__title">Добавить в корзину</div>
                                 <div class="slider-size__list"> 
                                   <ul> 
                                     <li> <a class="basket-open" href="#">XS</a></li>
@@ -848,7 +848,7 @@
                                   </svg></span></div>
                               <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                               <div class="slider-size"> 
-                                <div class="slider-size__title">1111 Добавить в корзину</div>
+                                <div class="slider-size__title">Добавить в корзину</div>
                                 <div class="slider-size__list"> 
                                   <ul> 
                                     <li> <a class="basket-open" href="#">XS</a></li>
@@ -890,7 +890,7 @@
                                   </svg></span></div>
                               <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                               <div class="slider-size"> 
-                                <div class="slider-size__title">1111 Добавить в корзину</div>
+                                <div class="slider-size__title">Добавить в корзину</div>
                                 <div class="slider-size__list"> 
                                   <ul> 
                                     <li> <a class="basket-open" href="#">XS</a></li>
@@ -932,7 +932,7 @@
                                   </svg></span></div>
                               <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                               <div class="slider-size"> 
-                                <div class="slider-size__title">1111 Добавить в корзину</div>
+                                <div class="slider-size__title">Добавить в корзину</div>
                                 <div class="slider-size__list"> 
                                   <ul> 
                                     <li> <a class="basket-open" href="#">XS</a></li>
