fix card total-look

--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -295,8 +295,7 @@
               <div class="basket-mobile-menu__footer-links">
                 <div class="basket__title-link">1 Товар на сумму</div>
                 <div class="basket__title-link">12 500 РУБ.</div>
-              </div>
-              <button class="btn btn--black btn--medium w100 max-w100" type="submit">Оформить заказ</button>
+              </div><a class="btn btn--black btn--medium w100 max-w100" href="basket.html" target="_blank">Оформить заказ</a>
             </div>
           </div>
         </div>
