--- a/dev/public/favorites.html
+++ b/dev/public/favorites.html
@@ -293,10 +293,9 @@
             </div>
             <div class="basket-mobile-menu__footer">
               <div class="basket-mobile-menu__footer-links">
-                <div class="basket__title-link">4 Товара на сумму</div>
-                <div class="basket__title-link">6 900 РУБ.</div>
-              </div>
-              <button class="btn btn--black btn--medium w100 max-w100" type="submit">Оформить заказ</button>
+                <div class="basket__title-link">1 Товар на сумму</div>
+                <div class="basket__title-link">12 500 РУБ.</div>
+              </div><a class="btn btn--black btn--medium w100 max-w100" href="basket.html" target="_blank">Оформить заказ</a>
             </div>
           </div>
         </div>
@@ -522,7 +521,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c1.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -558,7 +557,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c2.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -594,7 +593,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c3.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -630,7 +629,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c4.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -666,7 +665,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c5.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -702,7 +701,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c6.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -738,7 +737,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c7.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -774,7 +773,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/favorites/c8.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
