--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -293,10 +293,9 @@
             </div>
             <div class="basket-mobile-menu__footer">
               <div class="basket-mobile-menu__footer-links">
-                <div class="basket__title-link">4 Товара на сумму</div>
-                <div class="basket__title-link">6 900 РУБ.</div>
-              </div>
-              <button class="btn btn--black btn--medium w100 max-w100" type="submit">Оформить заказ</button>
+                <div class="basket__title-link">1 Товар на сумму</div>
+                <div class="basket__title-link">12 500 РУБ.</div>
+              </div><a class="btn btn--black btn--medium w100 max-w100" href="basket.html" target="_blank">Оформить заказ</a>
             </div>
           </div>
         </div>
@@ -543,7 +542,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -581,7 +580,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -619,7 +618,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -657,7 +656,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -700,7 +699,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c1.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -738,7 +737,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -776,7 +775,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -814,7 +813,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -852,7 +851,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c1.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -890,7 +889,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -928,7 +927,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -966,7 +965,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
