--- a/dev/public/personal.html
+++ b/dev/public/personal.html
@@ -293,10 +293,9 @@
             </div>
             <div class="basket-mobile-menu__footer">
               <div class="basket-mobile-menu__footer-links">
-                <div class="basket__title-link">4 Товара на сумму</div>
-                <div class="basket__title-link">6 900 РУБ.</div>
-              </div>
-              <button class="btn btn--black btn--medium w100 max-w100" type="submit">Оформить заказ</button>
+                <div class="basket__title-link">1 Товар на сумму</div>
+                <div class="basket__title-link">12 500 РУБ.</div>
+              </div><a class="btn btn--black btn--medium w100 max-w100" href="basket.html" target="_blank">Оформить заказ</a>
             </div>
           </div>
         </div>
