--- a/dev/public/search.html
+++ b/dev/public/search.html
@@ -293,10 +293,9 @@
             </div>
             <div class="basket-mobile-menu__footer">
               <div class="basket-mobile-menu__footer-links">
-                <div class="basket__title-link">4 Товара на сумму</div>
-                <div class="basket__title-link">6 900 РУБ.</div>
-              </div>
-              <button class="btn btn--black btn--medium w100 max-w100" type="submit">Оформить заказ</button>
+                <div class="basket__title-link">1 Товар на сумму</div>
+                <div class="basket__title-link">12 500 РУБ.</div>
+              </div><a class="btn btn--black btn--medium w100 max-w100" href="basket.html" target="_blank">Оформить заказ</a>
             </div>
           </div>
         </div>
@@ -531,7 +530,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -569,7 +568,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -607,7 +606,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -645,7 +644,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -688,7 +687,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c1.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -726,7 +725,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -764,7 +763,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -802,7 +801,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -840,7 +839,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c1.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -878,7 +877,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -916,7 +915,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
@@ -954,7 +953,7 @@
                       </svg></span></div>
                   <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img src="../dummy/catalog/c24.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                   <div class="slider-size"> 
-                    <div class="slider-size__title">1111 Добавить в корзину</div>
+                    <div class="slider-size__title">Добавить в корзину</div>
                     <div class="slider-size__list"> 
                       <ul> 
                         <li> <a class="basket-open" href="#">XS</a></li>
